<resources>
    <string name="code_hint_text">Start coding here</string>
    <string name="inputs_hint">Inputs (if any)</string>
    <string name="submit">Submit</string>
    <string name="output">Output :</string>
    <string name="clear">Clear</string>
    <string name="success">Execution Succeeded!</string>
    <string name="failure">Execution Failed!</string>
    <string name="loading">Loading . . .</string>
</resources>
