<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".features.editor.view.CompilerActivity">

    <ScrollView
        android:id="@+id/sv_scrolling_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_content_window"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="72dp">

            <Spinner
                android:id="@+id/sp_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:elevation="10dp"
                android:padding="6dp"
                android:spinnerMode="dialog"
                tools:listitem="@android:layout/activity_list_item" />

            <EditText
                android:id="@+id/et_code_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/transparent_black_hex_1"
                android:hint="@string/code_hint_text"
                android:inputType="textMultiLine"
                android:isScrollContainer="true"
                android:minHeight="200dp"
                android:padding="8dp" />

            <RelativeLayout
                android:id="@+id/ll_input_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_inputs"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="8dp"
                    android:background="@color/transparent_black_hex_1"
                    android:hint="@string/inputs_hint"
                    android:inputType="text"
                    android:padding="8dp" />

                <Button
                    android:id="@+id/bt_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/white"
                    android:text="@string/clear" />

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/ll_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:visibility="gone">


                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/avi_loading"
                    style="@style/AVLoadingIndicatorView.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:visibility="visible"
                    app:indicatorColor="@color/colorPrimary"
                    app:indicatorName="PacmanIndicator" />

                <TextView
                    android:id="@+id/loading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/loading"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_result_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/output"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_result_success"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/bright_green_tr30"
                    android:drawableEnd="@drawable/ic_success_48"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/success"
                    android:textColor="@color/dark_green"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_result_failure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/tuscan_red_tr40"
                    android:drawableEnd="@drawable/ic_failure_48"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/failure"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/content"
        app:layout_constraintEnd_toEndOf="@id/content"
        app:layout_constraintStart_toStartOf="@id/content" />

</android.support.constraint.ConstraintLayout>
